assets/css/theme/18f.css
@import url(../../lib/font/source-sans-pro/source-sans-pro.css);
/**
 * White theme for reveal.js. This is the opposite of the 'black' theme.
 *
 * Copyright (C) 2015 Hakim El Hattab, http://hakim.se
 */
section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
  color: #fff; }

/*********************************************
 * CONTROLS
 *********************************************/
.reveal .logo {
  position: fixed;
  width: 75px;
  height: 75px;
  z-index: 30;
  left: 10px;
  top: 10px;
  -webkit-user-select: none; }

.reveal .logo div {
  position: absolute;
  opacity: 0.05;
  width: 0;
  height: 0;
  border: 12px solid transparent;
  -webkit-transform: scale(0.9999);
  -ms-transform: scale(0.9999);
  transform: scale(0.9999);
  transition: all 0.2s ease;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }

/*********************************************
 * GLOBAL STYLES
 *********************************************/
body {
  background: #fff;
  background-color: #fff;
  font-family: 'Montserrat', sans-serif;
  font-size: 38px;
  font-weight: normal;
  color: #000;
}

header {
  margin: 20px;
}
header a {
  margin: 20px;
  color: #4ABAF7;
  text-decoration: none;
}

header a:hover {
    text-decoration: underline;
}

.reveal {
}

::selection {
  color: #fff;
  background: #91c8ff;
  text-shadow: none; }

.reveal .slides > section, .reveal .slides > section > section {
  line-height: 1.3;
  font-weight: inherit; }

/*********************************************
 * HEADERS
 *********************************************/
.reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
  margin: 0 0 20px 0;
  font-family: 'Montserrat', sans-serif;
  font-weight: 600;
  line-height: 1.2;
  letter-spacing: normal;
  text-shadow: none;
  word-wrap: break-word; }

.reveal h1 {
  font-size: 2.5em; }

.reveal h2 {
  font-size: 1.6em; }

.reveal h3 {
  font-size: 1.3em;
  color: #a61c00; }

.reveal h4 {
  font-size: 1.3em; }

.reveal h1 {
  text-shadow: none; }

/*********************************************
 * OTHER
 *********************************************/
.reveal p {
  margin: 20px 0;
  line-height: 1.3;
  text-align: left; }

/* Ensure certain elements are never larger than the slide itself */
.reveal img, .reveal video, .reveal iframe {
  max-width: 95%;
  max-height: 95%; }

.reveal strong, .reveal b {
  font-weight: bold; }

.reveal em {
  font-style: italic; }

.reveal ol, .reveal dl, .reveal ul {
  display: inline-block;
  text-align: left;
  margin: 0 0 0 1em; }

.reveal ol {
  list-style-type: decimal; }

.reveal ul {
  list-style-type: disc; }

.reveal ul ul {
  list-style-type: square; }

.reveal ul ul ul {
  list-style-type: circle; }

.reveal ul ul, .reveal ul ol, .reveal ol ol, .reveal ol ul {
  display: block;
  margin-left: 40px; }

.reveal dt {
  font-weight: bold; }

.reveal dd {
  margin-left: 40px; }

.reveal q, .reveal blockquote {
  quotes: none; }

.reveal blockquote {
  display: block;
  position: relative;
  width: 100%;
  margin: 20px;
  padding: 5px;
  font-style: italic;
  font-size: 16px;
  background: rgba(32,32,32, 0.8);
  color: white;
  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); }

.reveal blockquote::before {
  font-size: 14px;
  position: absolute;
  top: 5px;
  left: 5px;
  content: "Presenter's Notes";}

.reveal blockquote p:first-child, .reveal blockquote p:last-child {
  display: inline-block; }

.reveal .hide {
  display: none;
}

.commentary-toggle {
  display: inline;
  position: absolute;
  bottom: 20px;
  left: 20px;
  z-index: 1000;
}
.commentary-toggle a {
  color: #4ABAF7;
}

.reveal q {
  font-style: italic; }

.reveal pre {
  display: block;
  position: relative;
  width: 90%;
  margin: 20px auto;
  text-align: left;
  font-size: 0.55em;
  font-family: monospace;
  line-height: 1.2em;
  word-wrap: break-word;
  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }

.reveal code {
  font-family: monospace; }

.reveal pre code {
  display: block;
  padding: 5px;
  overflow: auto;
  max-height: 400px;
  word-wrap: normal;
  background: #3F3F3F;
  color: #DCDCDC; }

.reveal table {
  margin: auto;
  border-collapse: collapse;
  border-spacing: 0; }

.reveal table th {
  font-weight: bold; }

.reveal table th, .reveal table td {
  text-align: left;
  padding: 0.2em 0.5em 0.2em 0.5em;
  border-bottom: 1px solid; }

.reveal table tr:last-child td {
  border-bottom: none; }

.reveal sup {
  vertical-align: super; }

.reveal sub {
  vertical-align: sub; }

.reveal small {
  display: inline-block;
  font-size: 0.6em;
  line-height: 1.2em;
  vertical-align: top; }

.reveal small * {
  vertical-align: top; }

/*********************************************
 * LINKS
 *********************************************/
.reveal a {
  color: #4ABAF7;
  text-decoration: none;
  -webkit-transition: color 0.15s ease;
  -moz-transition: color 0.15s ease;
  transition: color 0.15s ease; }

.reveal a:hover {
  color: #5eaeff;
  text-shadow: none;
  border: none;
  text-decoration: none; }

.reveal .roll span:after {
  color: #fff;
  background: #0062c4; }

/*********************************************
 * IMAGES
 *********************************************/
.reveal section img {
  margin: 15px 0px; }

.reveal a img {
  -webkit-transition: all 0.15s linear;
  -moz-transition: all 0.15s linear;
  transition: all 0.15s linear; }

/*********************************************
 * NAVIGATION CONTROLS
 *********************************************/
.reveal .controls div.navigate-left, .reveal .controls div.navigate-left.enabled {
  border-right-color: #4ABAF7; }

.reveal .controls div.navigate-right, .reveal .controls div.navigate-right.enabled {
  border-left-color: #4ABAF7; }

.reveal .controls div.navigate-up, .reveal .controls div.navigate-up.enabled {
  border-bottom-color: #4ABAF7; }

.reveal .controls div.navigate-down, .reveal .controls div.navigate-down.enabled {
  border-top-color: #4ABAF7; }

.reveal .controls div.navigate-left.enabled:hover {
  border-right-color: #5eaeff; }

.reveal .controls div.navigate-right.enabled:hover {
  border-left-color: #5eaeff; }

.reveal .controls div.navigate-up.enabled:hover {
  border-bottom-color: #5eaeff; }

.reveal .controls div.navigate-down.enabled:hover {
  border-top-color: #5eaeff; }

/*********************************************
 * PROGRESS BAR
 *********************************************/
.reveal .progress {
  background: rgba(0, 0, 0, 0.2); }

.reveal .progress span {
  background: #4ABAF7;
  -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
  -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }

/*********************************************
 * SLIDE NUMBER
 *********************************************/
.reveal .slide-number {
  color: #4ABAF7; }

